SOLR-7580: Move defaults in bin/solr.in.sh into bin/solr (incl. Windows)